--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,31 @@
 * {
   padding: 0;
   margin: 0;
+}
+
+body {
   font-family: Helvetica;
+  text-align: center;
+}
+
+body.dark-mode {
+  background-color: #222;
+  color: #fff;
+}
+
+body.light-mode {
+  background-color: #f0f0f0;
+  color: #000;
 }
 
 /* Nav */
 
-nav {
+.navbar {
   display: flex;
   justify-content: space-between;
+  border-bottom: solid 1px #f6982d;
   padding: 15px;
   list-style: none;
-  border-bottom: solid 1px #f6982d;
   padding-bottom: 10px;
 }
 
@@ -19,8 +33,10 @@ li {
   cursor: pointer;
 }
 
-a {
+.navbar a {
   text-decoration: none;
+  color: #666;
+  font-weight: bold;
 }
 
 /* Footer */
@@ -36,6 +52,7 @@ a {
 
 .github:hover {
   background-color: #000;
+  border: solid 1px #000;
   color: #fff;
 }
 
@@ -50,6 +67,7 @@ a {
 
 .linkedin:hover {
   background-color: #0e76a8;
+  border: solid 1px #0e76a8;
   color: #fff;
 }
 
@@ -72,4 +90,18 @@ footer svg {
 footer p {
   margin: 5px;
   font-weight: bold;
+}
+
+/* Responsividade */
+@media (max-width: 450px) {
+  /* Footer */
+
+  footer {
+    flex-direction: column;
+  }
+
+  .linkedin,
+  .github {
+    font-size: 2rem;
+  }
 }
