--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,40 @@ li {
 
 .navbar a {
   text-decoration: none;
-  color: #666;
   font-weight: bold;
+}
+
+/* My Projects */
+
+.projetcs-online {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+}
+
+.card {
+  width: 30%;
+  margin: 1.5%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border: solid 1px #f6982d;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px 1px #00000096;
+  padding: 15px;
+  background-color: transparent;
+}
+
+.card h3 {
+  color: #f6982d;
+  margin: 15px;
+}
+
+.card p {
+  font-size: 0.8rem;
+  line-height: 1rem;
 }
 
 /* Footer */
