--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 body {
   font-family: Helvetica;
   text-align: center;
+  background-color: #222;
+  color: #fff;
 }
 
 body.dark-mode {
@@ -19,15 +21,28 @@ body.light-mode {
 }
 
 .welcome {
-  height: 250px;
+  height: 300px;
   padding-top: 150px;
-  background-color: #ccc;
   margin-bottom: 50px;
+  border-bottom: solid 1px #f6982d;
+  background-image: url("./assets/img/cubo.jfif");
+  background: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .welcome h1 {
-  color: #000;
-  font-size: 2.5rem;
+  font-size: 2rem;
+  background-color: #000000c4;
+  color: #fff;
+  font-weight: bolder;
+  padding: 25px;
+  max-width: 200px;
+  max-height: 150px;
+  margin: 0 auto;
+  border: solid 1px #f6982d;
+  box-shadow: 1px 1px 5px 1px #ffffff9c;
+  border-radius: 25px;
 }
 
 .btn {
@@ -66,6 +81,15 @@ body.light-mode {
 
 .navbar a {
   text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar span {
+  font-size: 0.5rem;
+  color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: bold;
 }
 
