--- a/src/index.css
+++ b/src/index.css
@@ -614,6 +614,7 @@ p::first-letter {
 
 .sidebar img {
   max-width: 70%;
+  max-height: 200px;
   border-radius: 15px;
   position: absolute;
   top: -3rem;
